upgrade to 3.2, change default jvm